@@ -5,19 +5,23 @@
 # Copyright 2011-2017 by it's authors.
 # Some rights reserved. See LICENSE.txt, AUTHORS.txt.
 
-from Products.Archetypes.browser.validation import InlineValidationView as _IVV
-from Acquisition import aq_inner
-from Products.CMFCore.utils import getToolByName
 import json
+
+from Acquisition import aq_inner
+
+from Products.Archetypes.browser.validation import InlineValidationView as BaseValidationView
+from Products.CMFCore.utils import getToolByName
 
 
 SKIP_VALIDATION_FIELDTYPES = ('image', 'file', 'datetime', 'reference')
 
-class InlineValidationView(_IVV):
+
+class InlineValidationView(BaseValidationView):
 
     def __call__(self, uid, fname, value):
-        '''Validate a given field. Return any error messages.
-        '''
+        """Validate a given field. Return any error messages.
+        """
+
         res = {'errmsg': ''}
 
         rc = getToolByName(aq_inner(self.context), 'reference_catalog')
