@@ -5,17 +5,21 @@
 # Copyright 2011-2017 by it's authors.
 # Some rights reserved. See LICENSE.txt, AUTHORS.txt.
 
+import re
+import string
+
 from Acquisition import aq_parent
+
 from Products.CMFPlone.utils import safe_unicode
-from bika.lims import bikaMessageFactory as _
-from bika.lims.utils import to_utf8
 from Products.CMFCore.utils import getToolByName
 from Products.validation import validation
 from Products.validation.interfaces.IValidator import IValidator
+
 from zope.interface import implements
-from datetime import datetime
-import string
-import re
+
+from bika.lims import api
+from bika.lims.utils import to_utf8
+from bika.lims import bikaMessageFactory as _
 
 
 class IdentifierTypeAttributesValidator:
@@ -28,13 +32,11 @@ class IdentifierTypeAttributesValidator:
 
     def __call__(self, value, *args, **kwargs):
         instance = kwargs['instance']
-        bsc = getToolByName(instance, "bika_setup_catalog")
-        translate = getToolByName(instance, 'translation_service').translate
         request = instance.REQUEST
         form = request.get('form', {})
         fieldname = kwargs['field'].getName()
         form_value = form.get(fieldname, False)
-        if form_value == False:
+        if form_value is False:
             # not required...
             return True
         if value == instance.get(fieldname):
@@ -57,13 +59,11 @@ class IdentifierValidator:
 
     def __call__(self, value, *args, **kwargs):
         instance = kwargs['instance']
-        bsc = getToolByName(instance, "bika_setup_catalog")
-        translate = getToolByName(instance, 'translation_service').translate
         request = instance.REQUEST
         form = request.get('form', {})
         fieldname = kwargs['field'].getName()
         form_value = form.get(fieldname, False)
-        if form_value == False:
+        if form_value is False:
             # not required...
             return True
         if value == instance.get(fieldname):
@@ -84,21 +84,49 @@ class UniqueFieldValidator:
     name = "uniquefieldvalidator"
 
     def __call__(self, value, *args, **kwargs):
+        field = kwargs['field']
+        fieldname = field.getName()
         instance = kwargs['instance']
-        fieldname = kwargs['field'].getName()
-        # request = kwargs.get('REQUEST', {})
-        # form = request.get('form', {})
-
         translate = getToolByName(instance, 'translation_service').translate
 
-        if value == instance.get(fieldname):
+        # return directly if nothing changed
+        if value == field.get(instance):
             return True
 
-        for item in aq_parent(instance).objectValues():
+        # We want to use the catalog to speed things up, as using `objectValues`
+        # is very expensive if the parent object contains many items
+        parent_objects = []
+
+        # 1. Get the right catalog for this object
+        catalogs = api.get_catalogs_for(instance)
+        catalog = catalogs[0]
+
+        # 2. Check if the field accessor is indexed
+        field_index = None
+        accessor = field.getAccessor(instance)
+        if accessor:
+            field_index = accessor.__name__
+
+        # 3. Check if the field index is in the indexes
+        if field_index and field_index in catalog.indexes():
+            # Field is indexed, use the catalog instead of objectValues
+            parent_path = api.get_parent_path(instance)
+            portal_type = instance.portal_type
+            catalog_query = {"portal_type": portal_type,
+                             "path": {"query": parent_path, "depth": 1}}
+            # We use the field index to reduce the results list
+            catalog_query[field_index] = value
+            parent_objects = map(api.get_object, catalog(catalog_query))
+        else:
+            # fall back to the objectValues :(
+            parent_object = api.get_parent(instance)
+            parent_objects = parent_object.objectValues
+
+        for item in parent_objects:
             if hasattr(item, 'UID') and item.UID() != instance.UID() and \
-                            fieldname in item.Schema() and \
-                            str(item.Schema()[fieldname].get(item)) == str(
-                        value):  # We have to compare them as strings because
+               fieldname in item.Schema() and \
+               str(item.Schema()[fieldname].get(item)) == str(value):
+                # We have to compare them as strings because
                 # even if a number (as an  id) is saved inside
                 # a string widget and string field, it will be
                 # returned as an int. I don't know if it is
@@ -115,7 +143,8 @@ validation.register(UniqueFieldValidator())
 
 
 class InvoiceBatch_EndDate_Validator:
-    """ Verifies that the End Date is after the Start Date """
+    """Verifies that the End Date is after the Start Date
+    """
 
     implements(IValidator)
     name = "invoicebatch_EndDate_validator"
@@ -151,9 +180,6 @@ class ServiceKeywordValidator:
 
     def __call__(self, value, *args, **kwargs):
         instance = kwargs['instance']
-        # fieldname = kwargs['field'].getName()
-        # request = kwargs.get('REQUEST', {})
-        # form = request.get('form', {})
 
         translate = getToolByName(instance, 'translation_service').translate
 
@@ -174,7 +200,7 @@ class ServiceKeywordValidator:
                 return to_utf8(translate(msg))
 
         calc = hasattr(instance, 'getCalculation') and \
-               instance.getCalculation() or None
+            instance.getCalculation() or None
         our_calc_uid = calc and calc.UID() or ''
 
         # check the value against all Calculation Interim Field ids
@@ -294,8 +320,8 @@ class InterimFieldsValidator:
             if field['keyword'] != value:
                 continue
             if 'title' in field and \
-                            field['title'] in title_keywords.keys() and \
-                            title_keywords[field['title']] != field['keyword']:
+               field['title'] in title_keywords.keys() and \
+               title_keywords[field['title']] != field['keyword']:
                 msg = _("Validation failed: column title '${title}' "
                         "must have keyword '${keyword}'",
                         mapping={'title': safe_unicode(field['title']),
@@ -304,8 +330,8 @@ class InterimFieldsValidator:
                 instance.REQUEST[key] = to_utf8(translate(msg))
                 return instance.REQUEST[key]
             if 'keyword' in field and \
-                            field['keyword'] in keyword_titles.keys() and \
-                            keyword_titles[field['keyword']] != field['title']:
+               field['keyword'] in keyword_titles.keys() and \
+               keyword_titles[field['keyword']] != field['title']:
                 msg = _("Validation failed: keyword '${keyword}' "
                         "must have column title '${title}'",
                         mapping={'keyword': safe_unicode(field['keyword']),
@@ -339,14 +365,14 @@ class FormulaValidator:
         translate = getToolByName(instance, 'translation_service').translate
         bsc = getToolByName(instance, 'bika_setup_catalog')
         interim_keywords = interim_fields and \
-                           [f['keyword'] for f in interim_fields] or []
+            [f['keyword'] for f in interim_fields] or []
         keywords = re.compile(r"\[([^\.^\]]+)\]").findall(value)
 
         for keyword in keywords:
             # Check if the service keyword exists and is active.
             dep_service = bsc(getKeyword=keyword, inactive_state="active")
             if not dep_service and \
-                    not keyword in interim_keywords:
+               keyword not in interim_keywords:
                 msg = _("Validation failed: Keyword '${keyword}' is invalid",
                         mapping={'keyword': safe_unicode(keyword)})
                 return to_utf8(translate(msg))
@@ -378,7 +404,7 @@ validation.register(FormulaValidator())
 
 
 class CoordinateValidator:
-    """ Validate latitude or longitude field values
+    """Validate latitude or longitude field values
     """
     implements(IValidator)
     name = "coordinatevalidator"
@@ -815,7 +841,6 @@ class ReferenceValuesValidator:
         instance = kwargs['instance']
         # fieldname = kwargs['field'].getName()
         request = kwargs.get('REQUEST', {})
-        fieldname = kwargs['field'].getName()
 
         translate = getToolByName(instance, 'translation_service').translate
 
@@ -1000,8 +1025,8 @@ class IBANvalidator:
         if len(IBAN) != length_c:
             diff = len(IBAN) - length_c
             msg = _('Wrong IBAN length by %s: %s' % (
-            ('short by %i' % -diff) if diff < 0 else
-            ('too long by %i' % diff), value))
+                ('short by %i' % -diff) if diff < 0 else
+                ('too long by %i' % diff), value))
             return to_utf8(translate(msg))
         # Validating procedure
         elif int("".join(str(letter_dic[x]) for x in IBAN)) % 97 != 1:
